# vimu

./: .gitignore  AGENTS.md  CUSTOM.md  GEMINI.md  LICENSE  README.md  vimu.code-workspace
.claude/: CLAUDE.md
.cursor/rules/: README.mdc
arduino/: AGENTS.md  CUSTOM.md  test_protocol.py
arduino/data_collection_controller/: data_collection_controller.ino
inference/: AGENTS.md  CUSTOM.md  Cargo.toml
inference/src/: camera.rs  display.rs  ekf.rs  main.rs  model.rs  pipeline.rs  ws.rs
metak-orchestrator/: AGENTS.md  EPICS.md  STATUS.md  TASKS.md
metak-orchestrator/.claude/: CLAUDE.md
metak-shared/: architecture.md  coding-standards.md  glossary.md  overview.md
metak-shared/api-contracts/: onnx-contract.md  serial-protocol.md  websocket-message.md
metak-shared/templates/: AGENTS.md.template  CUSTOM.md.template
training/: .env.sample  AGENTS.md  CUSTOM.md  GUIDE.md  annotate_seg.py  collect.py  collect_pose.py  compare_masks.py  conftest.py  dataset.py  export_onnx.py  export_seg.py  model.py  model_paths.py  requirements.txt  test_segmentor.py  train.py  train_segmentor.py
training/tests/: test_collect.py  test_dataset.py  test_export.py  test_model.py  test_training_modes.py
