[package]
name = "vimu"
version = "0.1.0"
edition = "2021"

[features]
default = []
camera = ["dep:opencv"]

[dependencies]
# ONNX Runtime with CUDA
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
ndarray = "0.17"

# Camera (optional — requires OpenCV dev libraries)
opencv = { version = "0.98", features = ["videoio", "imgproc", "highgui"], optional = true }

# WebSocket server
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# EKF linear algebra
nalgebra = "0.33"

# Config and serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
